--- a/index.html
+++ b/index.html
@@ -19,6 +19,21 @@
             </nav>
             <div id="header-icons" class="box-color"></div>
         </header>
+
+        <main>
+            <section id="hero" class="grid">
+                <img src="http://via.placeholder.com/1920x950/000000/ffffff" class="hero-image">
+                <div id="hero-text1" class="box-color2"><h2>Lorem ipsum dolor sit amet</h2></div>
+                <div id="hero-text2" class="box-color2"><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex, ipsa. Delectus amet laudantium, totam dolorum illum accusantium debitis? Est consectetur itaque provident. At provident vel ducimus dicta eius nesciunt. Quod.</p></div>
+            </section>
+
+            <section id="vedio" class="grid">
+                <div id="video-text1" class="box-color2"><h2>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta doloribus, rerum accusamus reprehenderit voluptatibus perspiciatis esse cum ea consectetur obcaecati.</h2></div>
+                <div id="video-text2" class="box-color2"><p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Modi cumque consequuntur, error explicabo voluptatem fugit iste iusto ipsa atque. Corporis earum illo dicta deserunt dolores quia illum esse sapiente vel ipsum dolor sit, amet consectetur adipisicing elit. Modi cumque consequuntur, error explicabo voluptatem fugit.</p></div>
+                <div id="video-image"><img src="http://via.placeholder.com/1130x560/000000/ffffff"></div>
+            </section>
+
+        </main>
     </div>
     
 </body>
