making mobile page

--- a/index_mobile.htm
+++ b/index_mobile.htm
@@ -7,82 +7,77 @@
 
     <title>This is the best drink - Orbitz!</title>
     <link href="css/normalize.css" rel="stylesheet">
-    <link href="css/main.css" rel="stylesheet">
+    <link href="css/main-mobile.css" rel="stylesheet">
 </head>
 <body>
     <h1 class="hidden">Special Beverage - Orbitz</h1>
     <div class="container">
         <header id="main-header" class="grid">
             <div id="header-logo" class="box-color"></div>
-            <nav id="header-nav" class="box-color">
+            <nav id="header-hamburger" class="box-color">
                 <h2 class="hidden">Main Navigation</h2>
             </nav>
-            <div id="header-icons" class="box-color"></div>
         </header>
 
         <main>
             <section id="hero" class="grid">
-                <img src="http://via.placeholder.com/1920x950/000000/ffffff" class="hero-image">
-                <div id="hero-text1" class="box-color2"><h2>Lorem ipsum dolor sit amet</h2></div>
-                <div id="hero-text2" class="box-color2"><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex, ipsa. Delectus amet laudantium, totam dolorum illum accusantium debitis? Est consectetur itaque provident. At provident vel ducimus dicta eius nesciunt. Quod.</p></div>
+                <img src="http://via.placeholder.com/375x950/000000/ffffff" class="hero-image">
+                <div id="hero-text" class="box-color2"><h2>Lorem ipsum dolor sit amet</h2></div>
             </section>
 
             <section id="video" class="grid">
-                <div id="video-text1" class="box-color2"><h2>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta doloribus, rerum accusamus reprehenderit voluptatibus perspiciatis esse cum ea consectetur obcaecati.</h2></div>
+                <div id="video-text1" class="box-color2"><h2>Lorem ipsum dolor sit amet consectetur adipisicing elit.</h2></div>
                 <div id="video-text2" class="box-color2"><p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Modi cumque consequuntur, error explicabo voluptatem fugit iste iusto ipsa atque. Corporis earum illo dicta deserunt dolores quia illum esse sapiente vel ipsum dolor sit, amet consectetur adipisicing elit. Modi cumque consequuntur, error explicabo voluptatem fugit.</p></div>
-                <div id="video-image"><img src="http://via.placeholder.com/1130x560/000000/070707"></div>
+                <div id="video-image"><img src="http://via.placeholder.com/375x210/000000/070707"></div>
             </section>
 
             <section id="gallery1" class="grid">
-                <div id="gallery1-image"><img src="http://via.placeholder.com/400x500/000000/ffffff" class="gallery-image"></div>
+                <div id="gallery1-image"><img src="http://via.placeholder.com/360x450/000000/ffffff" class="gallery-image"></div>
                 <div id="gallery1-text">
                     <h2>This is apple favor</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod ea enim fugiat voluptate, optio similique et! Non animi, optio accusamus illum totam officia esse omnis cum culpa error deleniti quia?</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod ea enim fugiat voluptate, optio similique et!</p>
                 </div>
                 <div id="gallery1-click"><a href="#.html"><p>See More</p></a></div>
             </section>
 
             <section id="gallery2" class="grid">
-                <div id="gallery2-image"><img src="http://via.placeholder.com/400x500/000000/ffffff" class="gallery-image"></div>
+                <div id="gallery2-image"><img src="http://via.placeholder.com/360x450/000000/ffffff" class="gallery-image"></div>
                 <div id="gallery2-text">
                     <h2>This is apple favor</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod ea enim fugiat voluptate, optio similique et! Non animi, optio accusamus illum totam officia esse omnis cum culpa error deleniti quia?</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod ea enim fugiat voluptate, optio similique et!</p>
                 </div>
                 <div id="gallery2-click"><a href="#.html"><p>See More</p></a></div>
             </section>
 
             <section id="gallery3" class="grid">
-                <div id="gallery3-image"><img src="http://via.placeholder.com/400x500/000000/ffffff" class="gallery-image"></div>
+                <div id="gallery3-image"><img src="http://via.placeholder.com/360x450/000000/ffffff" class="gallery-image"></div>
                 <div id="gallery3-text">
                     <h2>This is apple favor</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod ea enim fugiat voluptate, optio similique et! Non animi, optio accusamus illum totam officia esse omnis cum culpa error deleniti quia?</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod ea enim fugiat voluptate, optio similique et!</p>
                 </div>
                 <div id="gallery3-click"><a href="#.html"><p>See More</p></a></div>
             </section>
 
             <section id="gallery4" class="grid">
-                <div id="gallery4-image"><img src="http://via.placeholder.com/400x500/000000/ffffff" class="gallery-image"></div>
+                <div id="gallery4-image"><img src="http://via.placeholder.com/360x450/000000/ffffff" class="gallery-image"></div>
                 <div id="gallery4-text">
                     <h2>This is apple favor</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod ea enim fugiat voluptate, optio similique et! Non animi, optio accusamus illum totam officia esse omnis cum culpa error deleniti quia?</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod ea enim fugiat voluptate, optio similique et!</p>
                 </div>
                 <div id="gallery4-click"><a href="#.html"><p>See More</p></a></div>
             </section>
 
             <section id="about-history-shop" class="grid">
                 <h2 class="hidden">our story and more information</h2>
-                <div id="about-us1">
-                    <div><img src="http://via.placeholder.com/400x500/000000/ffffff" alt="About Us"></div>
+               
+                    <img id="img1" src="http://via.placeholder.com/300x415/000000/ffffff" alt="About Us">
                     <div id="about-click1"><a href="#.html"><p>More Info</p></a></div>
-                </div>
-                <div id="about-us2">
-                    <div><img src="http://via.placeholder.com/400x500/000000/ffffff" alt="Our History"></div>
+                    
+                    <img id="img2" src="http://via.placeholder.com/300x415/000000/ffffff" alt="Our History">
                     <div id="about-click2"><a href="#.html"><p>More Info</p></a></div>
-                </div>
-                <div id="about-us3">
-                    <div><img src="http://via.placeholder.com/400x500/000000/ffffff" alt="Shop Now"></div>
+
+                    <img id="img3" src="http://via.placeholder.com/300x415/000000/ffffff" alt="Shop Now">
                     <div id="about-click3"><a href="#.html"><p>More Info</p></a></div>
-                </div>
             </section>
 
             <section id="sign-up" class="grid">
